--- a/package.json
+++ b/package.json
@@ -1,21 +1,44 @@
 {
+  "name": "blog",
+  "private": false,
+  "author": {
+    "name": "GuTianhuang",
+    "email": "gutianhuang@foxmail.com"
+  },
   "scripts": {
-    "start": "snowpack dev",
-    "build": "snowpack build",
-    "test": "jest",
-    "format": "prettier --write \"src/**/*.{js,jsx}\"",
-    "lint": "prettier --check \"src/**/*.{js,jsx}\""
+    "start": "cross-env PORT=5000 craco start",
+    "build": "cross-env GENERATE_SOURCEMAP=false craco build"
+  },
+  "homepage": ".",
+  "eslintConfig": {
+    "extends": "react-app"
+  },
+  "browserslist": {
+    "production": [
+      ">0.2%",
+      "not dead",
+      "not op_mini all"
+    ],
+    "development": [
+      "last 1 chrome version",
+      "last 1 firefox version",
+      "last 1 safari version"
+    ]
   },
   "dependencies": {
-    "react": "^16.13.0",
-    "react-dom": "^16.13.0"
+    "@testing-library/jest-dom": "^4.2.4",
+    "@testing-library/react": "^9.5.0",
+    "@testing-library/user-event": "^7.2.1",
+    "dayjs": "^1.8.28",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1",
+    "react-router-dom": "^5.2.0",
+    "react-scripts": "3.4.1"
   },
   "devDependencies": {
-    "@snowpack/app-scripts-react": "^1.2.0",
-    "@testing-library/jest-dom": "^5.5.0",
-    "@testing-library/react": "^10.0.3",
-    "jest": "^25.4.0",
-    "prettier": "^2.0.0",
-    "snowpack": "^2.5.0"
+    "@babel/plugin-proposal-decorators": "^7.10.1",
+    "@craco/craco": "^5.6.4",
+    "craco-less": "^1.17.0",
+    "cross-env": "^7.0.2"
   }
 }
