--- a/jsconfig.json
+++ b/jsconfig.json
@@ -4,6 +4,7 @@
     "paths": {
       "@@/*": ["./*"],
       "@/*": ["src/*"],
+      "@articles": ["articles/*"],
       "@assets/*": ["src/assets/*"],
       "@common/*": ["src/common"],
       "@components/*": ["src/components/*"],
