--- a/package.json
+++ b/package.json
@@ -7,9 +7,6 @@
   },
   "scripts": {
     "start": "cross-env PORT=5000 craco start",
-    "routerWatcher": "nodemon --config nodemon.json",
-    "new": "node scripts/artcleGenerator.js",
-    "dev": "concurrently \"npm start\" \"npm run routerWatcher\" ",
     "build": "cross-env GENERATE_SOURCEMAP=false craco build"
   },
   "eslintConfig": {
@@ -40,9 +37,7 @@
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.10.1",
     "@craco/craco": "^5.6.4",
-    "concurrently": "^5.2.0",
     "craco-less": "^1.17.0",
-    "cross-env": "^7.0.2",
-    "nodemon": "^2.0.4"
+    "cross-env": "^7.0.2"
   }
 }
