--- a/jsconfig.json
+++ b/jsconfig.json
@@ -6,12 +6,8 @@
       "@/*": ["src/*"],
       "@assets/*": ["src/assets/*"],
       "@common/*": ["src/common"],
-      "@components/*": ["src/components/*"],
       "@hooks/*": ["src/hooks/*"],
-      "@layout/*": ["src/layout/*"],
-      "@pages/*": ["src/pages/*"],
-      "@store/*": ["src/store/*"],
-      "@utils/*": ["src/utils/*"]
+      "@pages/*": ["src/pages/*"]
     }
   },
   "exclude": ["node_modules", "dist"]
