add anmation and transition for pges

--- a/src/common/project.json
+++ b/src/common/project.json
@@ -1,7 +1,8 @@
 {
   "githubURL": "https://github.com/Gu-Miao",
+  "projectURL": "https://github.com/Gu-Miao/gu-miao.github.io",
   "issuesURL": "https://github.com/Gu-Miao/gu-miao.github.io/issues",
-  "wikiURL": "https://github.com/Gu-Miao/gu-miao.github.io/wiki",
+  "spaGitPageURL": "https://github.com/rafrex/spa-github-pages",
   "licenseURL": "https://github.com/Gu-Miao/gu-miao.github.io/blob/dev/LICENSE",
   "blogURL": "https://blog.csdn.net/qq_39223195",
   "username": "GuTianhuang",
