--- a/jsconfig.json
+++ b/jsconfig.json
@@ -5,7 +5,8 @@
       "@@/*": ["./*"],
       "@/*": ["src/*"],
       "@assets/*": ["src/assets/*"],
-      "@common/*": ["src/common"],
+      "@common/*": ["src/common/*"],
+      "@components/*": ["src/components/*"],
       "@hooks/*": ["src/hooks/*"],
       "@pages/*": ["src/pages/*"]
     }
