--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.2.0",
-    "react-scripts": "3.4.1"
+    "react-scripts": "^3.4.4"
   },
   "devDependencies": {
     "@babel/plugin-proposal-decorators": "^7.10.1",
